src/webapp/style.css
/* ... */
        .logout-button:hover {
            background-color: var(--complementary-light);
            color: var(--primary-dark);
            cursor: pointer;
        }

    .logo {
        grid-row: title / main;
        grid-column: left-bar / right-bar;
        display: flex;
        width: 100%;
        align-items: center;
        justify-content: center;
        background-color: var(--accent-color);
    }

    .clock-wrapper {
        display: flex;
        width: fit-content;
        font-family: 'Barrio', cursive;
        color: var(--text-light);
        font-size: 8vh;
        align-items: center;
        justify-content: center;
        line-height: 100%;
    }

        .clock-wrapper::before {
            margin-right: -0.25em;
            content: "Real Time F";
        }

        .clock-wrapper::after {
            margin-left: -0.25em;
            content: "rum";
        }

        .clock-background {
            position: relative;
            margin: 0 1vh;
            height: 10vh;
            /*to make the height and width responsive*/
            width: 10vh;
            background: url(./static/images/clock.png) no-repeat;
            /*setting our background image*/
            background-size: 100%;
        }

        .hour,
        .minute,
        .second {
            position: absolute;
            background: var(--primary-dark);
            border-radius: 10px;
            transform-origin: bottom;
        }
        
        .hour {
            width: 1.8%;
            height: 15%;
            top: 34.5%;
            left: 48.85%;
            opacity: 0.8;
        }
        
        .minute {
            width: 1.6%;
            height: 20%;
            top: 29.5%;
            left: 48.9%;
            opacity: 0.8;
        }
        
        .second {
            width: 1%;
            height: 25%;
            top: 24.5%;
            left: 49.25%;
            opacity: 0.8;
        }

/* ADS AREA */

.ads-area {
    grid-row: main / row-end;
    grid-column: left-bar / main-posts;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    background-color: var(--primary-light);
    padding: 10px;
}

    .ad-text {
        align-self: flex-end;
        font-size: x-small;
        color: var(--complementary-dark);
    }

    img {
        width: 100%;
        height: auto;
    }

    .ad-image:hover {
        transform: scale(1.02);
        transition: 0.4s ease-out;
        cursor: pointer;
    }

/* POSTS & THREAD AREA */

.posts-area,
.thread-area {
    padding: 10px;
    display: grid;
    grid-row: main / row-end;
    grid-column: main-posts / main-users;
    align-content: flex-start;
    background-color: var(--complementary-light);
    z-index: 0;
}

.login-area,
.register-area {
    padding: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    grid-row: main / row-end;
    grid-column: left-bar / right-bar;
    background-color: var(--complementary-light);
    z-index: 0;
}


.user-input-area {
    display: flex;
    flex-direction: column;
    padding: 1%;
    background-color: var(--primary-light);
    border-radius: 7px;
    box-shadow: 2px 3px var(--complementary-light);
}

    .login-wrapper,
    .register-wrapper {
        display: flex;
        flex-direction: column;
        align-self: center;
        margin: auto;
    }

    .gender-wrapper {
        display: flex;
        flex-direction: row;
        padding: 1%;
        align-items: center;
        opacity: 0.5;
    }

    .login-wrapper > .user-input-area,
    .register-wrapper > .user-input-area {
        padding: 5%;
        white-space: nowrap;
        width: max-content;
    }

    .new-post-header,
    .login-header,
    .register-header {
        font-weight: bold;
        font-size: larger;
        padding: 1%;
    }

    .posts-wrapper,
    .thread-wrapper {
        display: flex;
        flex-direction: column;
        padding-right: 10px;
        overflow: scroll;
        scrollbar-width: thin;
    }

    .thread-wrapper > .single-post:first-of-type {
        margin-left: 0;
        width: 98%;
        margin-top: 20px;
    }
    
    .thread-wrapper > .single-post,
    .thread-wrapper > .more-comments {
        margin-left: 10%;
        width: 88%;
        margin-top: 0;
        margin-bottom: 20px;
    }

        .single-post {
            padding: 1%;
            margin: 20px 0;
            width: 98%;
            background-color: #fff;
            height: fit-content;
            border-radius: 20px;
            box-shadow: 0px 3px var(--complementary-light);
        }

            .post-header {
                padding: 10px;
                display: flex;
                justify-content: space-between;
                font-variant: small-caps;
                font-size: smaller;
            }

            .post-horizontal {
                border-color: var(--complementary-light);
                margin: 0;
            }

            .post-body {
                padding: 3px 10px 30px;
            }

                .post-title {
                    margin-bottom: 20px;
                    font-weight: bold;
                    font-size: larger;
                    cursor: pointer;
                }

                .post-content {
                    line-height: 1.4;
                    text-align: justify;
                }

            .post-footer {
                display: flex;
                flex-direction: column;
            }
/* ... */

